--- a/account-service-dev.properties
+++ b/account-service-dev.properties
@@ -1,6 +1,6 @@
 server.port=8889
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3306/accounts-db
+spring.datasource.url=jdbc:mysql://localhost:3306/account-db
 spring.datasource.username=root
 spring.datasource.password=password
 
